getting youtube data

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 .classpath
 *.launch
 .settings/
+*.log
+
 
 # misc
 /.sass-cache
@@ -21,6 +23,7 @@
 /coverage/*
 /libpeerconnection.log
 npm-debug.log
+npm-debug.log.*
 testem.log
 /typings
 
